# hamllab.github.io

./: .firebaserc  .gitignore  .nojekyll  CNAME  Neuroscience_PhD.qmd  README.html  README.md  Research_Assistant.qmd  Research_Coordinator.qmd  _quarto.yml  about.html  index.html  index.qmd  install.sh  listings.json  nealmorton.html  nealmorton.qmd  papers.json  people.html  people.qmd  positions.html  positions.qmd  posters.qmd  projects.html  publications.html  publications.qmd  pyproject.toml  research.css  research.qmd  robots.txt  search.json  sitemap.xml  software.html  software.qmd  styles.css
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
illustrator/: haml_zen.ai  mke_brain.ai
news/2024-10_phd/: index.qmd
news/Coordinator/: index.qmd
news/phd/: index.html  index.qmd
news/research_coordinator/: index.qmd  research_coordinator.qmd
news/welcome/: index.qmd
news/zen/: index.html  index.qmd
people/: AshtonHoodjer.qmd  anacasper.qmd  ashtonhoodjer.qmd  graciewild.qmd  julianamaglio.qmd  linzan-liu.qmd  linzanliu.qmd  mahkiagolbashi.qmd  majadavidovic.qmd  neal-morton.qmd  nealmorton.qmd  patriciaiwok.qmd  people.css  samchipman.qmd  tierelhoodnellum.qmd
positions/: neuroscience-phd.qmd  research-assistant.qmd  research-coordinator.qmd
ref/: papers.json  posters.json  software.json
src/haml/: publications.py
templates/: bib_entry.html
